--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -178,3 +178,8 @@ li {
     .my-button:hover {
       background-color: #45a049;
     }
+    .line{
+      color:black;
+      text-align: center;
+    }
+  
