--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-
+/* 
 .body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -162,4 +162,4 @@ input, textarea {
 
 textarea {
     resize: none;
-}
+} */
