--- a/src/pages/ContactPage.css
+++ b/src/pages/ContactPage.css
@@ -15,6 +15,7 @@
   font-weight: bold;
   color: #007bff;
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 input,
@@ -28,13 +29,15 @@ textarea {
 }
 
 .cta-button {
-  background-color: #007bff;
+  background-color: #4CAF50 ;
   color: white;
   padding: 0.6rem 1.2rem;
   border: none;
   border-radius: 5px;
   font-weight: bold;
   cursor: pointer;
+  text-align: center;
+  display: inline-block;
 }
 
 .cta-button:hover {
@@ -50,7 +53,7 @@ textarea {
  
   border: 1px solid #ddd;
   border-radius: 8px;
-  background-color: #f9f9f9;
+  background-color: #668598;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
  
   margin: 2rem auto;
